# zadachkee

./: .coveragerc  .flake8  .gitignore  Makefile  Makefile.in.mk  Makefile.targets.mk  poetry.toml  pyproject.toml  setup_python.sh
.github/workflows/: qa.yaml
algo/max_len_seq/: README.md  solution.py  solution_test.py
algo/stack_o1_max/: README.md  solution.py  solution_test.py
algo/stones_and_jewels/: README.md  solution.py  solution_test.py  task.py  tast_test.py
