[tool.poetry]
name = "zadachkee"
version = "2022.8.26"
description = ""
authors = ["Alexander Sidorov <alexander@sidorov.dev>"]

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.17.21"
attrs = "^21.4.0"
black = "^22.3.0"
click = "^8.1.3"
coverage = {extras = ["toml"], version = "^6.4.1"}
devtools = {extras = ["pygments"], version = "^0.8.0"}
dlint = "^0.12.0"
fastapi = "^0.78.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.0"
flake8-dashboard = "^0.1.4"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.2.1"
flake8-executable = "^2.1.1"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.1.1"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
greenlet = "^1.1.2"
httpie = "^3.2.1"
httpx = "^0.23.0"
ipython = "^8.4.0"
isort = "^5.10.1"
mypy = "^0.961"
orjson = "^3.7.5"
oyabun = "^2022.8.20"
pep8-naming = "^0.13.0"
pudb = "^2022.1.1"
pydantic = "^1.9.1"
pylint = "^2.14.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-httpx = "^0.21.0"
pytest-mock = "^3.7.0"
python = "^3.10.6"
tomlkit = "^0.11.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = "\\.artifacts/"
line-length = 79
target-version = ["py310"]


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [".artifacts"]


[tool.pytest.ini_options]
cache_dir = ".artifacts/pytest/"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    ".",
]
addopts = "--cov --cov-branch --no-cov-on-fail --cov-fail-under=50"


[tool.mypy]
cache_dir = ".artifacts/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [".artifacts",]
files = ["."]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "asyncpg.*",
    "defusedxml.ElementTree",
    "devtools",
    "dj_database_url",
    "django.*",
    "dockerfile_parse",
    "oyabun.*",
    "ruamel",
    "uvicorn",
]